FEAT Main design, songs, bugs and fishes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<div style="text-align: center">
-  <h1>Animal Crossing</h1>
-  <ul>
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/fishes">Fishes</a></li>
-    <li><a routerLink="/bugs">Bugs</a></li>
-  </ul>
-</div>
+<body>
+  <div style="text-align: center">
+    <img src="https://img.icons8.com/clouds/500/000000/animal-crossing.png" style="width: 300px"/>
+    <ul>
+      <li><a routerLink="/home">Home</a></li>
+      <li><a routerLink="/fishes">Fishes</a></li>
+      <li><a routerLink="/bugs">Bugs</a></li>
+      <li><a routerLink="/songs">Songs</a></li>
+    </ul>
+  </div>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</body>
