--- a/src/app/pages/songs-page/songs-page.component.scss
+++ b/src/app/pages/songs-page/songs-page.component.scss
@@ -47,3 +47,10 @@
     font-size: 12px;
   }
 }
+audio {
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  border-radius: 90px;
+  margin: 20px;
+  width: 250px;
+  color: grey;
+}
