--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,6 @@
 <div style="text-align: center">
+    <h1>HOLA</h1>
   <img src="../../../assets/leaf.gif" alt="" />
 </div>
+
+<!-- ng build --output-path docs --base-href /angular_AC/ -->
