--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <body>
   <div style="text-align: center">
-    <img src="https://img.icons8.com/clouds/500/000000/animal-crossing.png" style="width: 300px"/>
+    <img
+      src="https://img.icons8.com/clouds/500/000000/animal-crossing.png"
+      style="width: 300px"
+    />
     <ul>
       <li><a routerLink="/home">Home</a></li>
       <li><a routerLink="/fishes">Fishes</a></li>
