--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,6 +1,8 @@
+h1 {
+  font-family: "Otomanopee One", sans-serif;
+}
 
-
-img{
-    width:200px;
-    padding: 10px;
+img {
+  width: 200px;
+  padding: 10px;
 }
