--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,13 @@
       src="https://img.icons8.com/clouds/500/000000/animal-crossing.png"
       style="width: 300px"
     />
+    <embed
+      src="https://acnhapi.com/v1/hourly/1"
+      loop="true"
+      autostart="true"
+      width="2"
+      height="0"
+    />
     <ul>
       <li><a routerLink="/home">Home</a></li>
       <li><a routerLink="/fishes">Fishes</a></li>
@@ -11,6 +18,5 @@
       <li><a routerLink="/songs">Songs</a></li>
     </ul>
   </div>
-
   <router-outlet></router-outlet>
 </body>
