FEAT Blathers and styles

--- a/src/app/pages/bugs-page/bugs-page.component.html
+++ b/src/app/pages/bugs-page/bugs-page.component.html
@@ -3,8 +3,16 @@
     <figure class="section__figure">
       <h2>{{ bug.name["name-EUen"] | titlecase }}</h2>
       <h5>{{ bug["catch-phrase"] }}</h5>
-        <img src="{{ bug.image_uri }}" alt="" />
-      <p>{{ bug["museum-phrase"] }}</p>
+      <img src="{{ bug.image_uri }}" alt="" />
+
+      <p>
+        <span
+          ><img
+            class="blathers"
+            src="https://static.wikia.nocookie.net/animalcrossingpocketcamp_gamepedia_en/images/4/46/Blathers_Icon.png"
+            alt="" /></span
+        >{{ bug["museum-phrase"] }}
+      </p>
     </figure>
   </div>
 </section>
