--- a/src/app/pages/bugs-page/bugs-page.component.scss
+++ b/src/app/pages/bugs-page/bugs-page.component.scss
@@ -5,7 +5,7 @@
 
   &__figure {
     border: 4px solid #422f2d;
-    font-family: 'Otomanopee One', sans-serif;
+    font-family: "Otomanopee One", sans-serif;
     color: white;
     text-align: center;
     padding: 10px;
@@ -16,23 +16,18 @@
     background-size: cover;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
-  .img-container {
-    margin: auto;
-    width: 200px;
-    height: 200px;
-  }
   h2 {
     padding: 5px;
     border-radius: 20px;
     color: #422f2d;
-    background-color: #FBCD59;
+    background-color: #fbcd59;
     font-size: 18px;
   }
   h5 {
     padding: 10px;
     border-radius: 20px;
     color: #422f2d;
-    background-color: #FBCD59;
+    background-color: #fbcd59;
     font-size: 14px;
   }
   img {
@@ -41,10 +36,16 @@
     height: auto;
   }
   p {
-    padding: 10px;
+    padding: 20px;
+    text-align: justify;
     border-radius: 20px;
     color: #422f2d;
-    background-color: #FBCD59;;
+    background-color: #fbcd59;
     font-size: 12px;
+  }
+
+  .blathers {
+    width: 20px;
+    padding-right: 10px;
   }
 }
