--- a/src/app/pages/fishes-page/fishes-page.component.html
+++ b/src/app/pages/fishes-page/fishes-page.component.html
@@ -4,7 +4,12 @@
       <h2>{{ fish.name["name-EUen"] | titlecase }}</h2>
       <h5>{{ fish["catch-phrase"] }}</h5>
       <img src="{{ fish.image_uri }}" alt="" />
-      <p>{{ fish["museum-phrase"] }}</p>
+      <p><span
+        ><img
+          class="blathers"
+          src="https://static.wikia.nocookie.net/animalcrossingpocketcamp_gamepedia_en/images/4/46/Blathers_Icon.png"
+          alt="" /></span
+      >{{ fish["museum-phrase"] }}</p>
     </figure>
   </div>
 </section>
