--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,6 @@ body{
     background-attachment: fixed;
     margin: 0px;
     padding: 0px;
+    cursor: url("./assets/cursor.cur") 16 16, auto;
 }
+
