--- a/src/app/pages/fishes-page/fishes-page.component.html
+++ b/src/app/pages/fishes-page/fishes-page.component.html
@@ -2,14 +2,18 @@
   <div *ngFor="let fish of fishes">
     <figure class="section__figure">
       <h2>{{ fish.name["name-EUen"] | titlecase }}</h2>
-      <h5>{{ fish["catch-phrase"] }}</h5>
+      <h5>"{{ fish["catch-phrase"] }}"</h5>
       <img src="{{ fish.image_uri }}" alt="" />
-      <p><span
-        ><img
-          class="blathers"
-          src="https://static.wikia.nocookie.net/animalcrossingpocketcamp_gamepedia_en/images/4/46/Blathers_Icon.png"
-          alt="" /></span
-      >{{ fish["museum-phrase"] }}</p>
+	<!--   <div class="description">
+          <p>
+            <span
+              ><img
+                class="blathers"
+                src="https://static.wikia.nocookie.net/animalcrossingpocketcamp_gamepedia_en/images/4/46/Blathers_Icon.png"
+                alt="" /></span
+            >{{ bug["museum-phrase"] }}
+          </p>
+        </div> -->
     </figure>
   </div>
 </section>
