--- a/src/app/pages/fishes-page/fishes-page.component.scss
+++ b/src/app/pages/fishes-page/fishes-page.component.scss
@@ -9,30 +9,28 @@
     color: white;
     text-align: center;
     padding: 10px;
-    width: 300px;
+    width: 200px;
+    height: auto;
     background-color: white;
     border-radius: 20px;
     background-image: url(../../../assets/card_background.jpg);
     background-size: cover;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
-  img {
-    width: 400px;
-    height: 200px;
+    margin: 10px;
   }
   h2 {
     padding: 5px;
     border-radius: 20px;
     color: #422f2d;
     background-color: #fbcd59;
-    font-size: 18px;
+    font-size: 12px;
   }
   h5 {
     padding: 10px;
     border-radius: 20px;
     color: #422f2d;
     background-color: #fbcd59;
-    font-size: 14px;
+    font-size: 10px;
   }
   img {
     border-radius: 20px;
@@ -41,14 +39,21 @@
   }
   p {
     padding: 20px;
+    text-align: justify;
     border-radius: 20px;
     color: #422f2d;
     background-color: #fbcd59;
     font-size: 12px;
-    text-align: justify;
   }
+
   .blathers {
     width: 20px;
     padding-right: 10px;
+  }
+  .description {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
