--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,5 @@
 <div style="text-align: center">
-    <h1>HOLA</h1>
-  <img src="../../../assets/leaf.gif" alt="" />
+  <img src="https://cdn02.nintendo-europe.com/media/images/08_content_images/games_6/nintendo_switch_7/nswitch_animalcrossingnewhorizons/NSwitch_AnimalCrossingNewHorizons_Overview_MoreMerrier_img_01.png" alt="" />
 </div>
 
 <!-- ng build --output-path docs --base-href /angular_AC/ -->
