FIX link portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
       height="80"
       viewBox="0 0 250 250"
       style="
-        fill: #C07853;
-        color: #5C3E34;
+        fill: #c07853;
+        color: #5c3e34;
         position: absolute;
         top: 0;
         border: 0;
@@ -78,7 +78,7 @@
         <li>
           <a
             target="_blank"
-            routerLink="https://lethamburn.github.io/react_portfolio/"
+            href="https://lethamburn.github.io/react_portfolio/"
             >Portfolio</a
           >
         </li>
@@ -91,6 +91,10 @@
 </body>
 <footer>
   <p>Animal Crossing - Antonio Rosales Martínez © 2021</p>
-  <span>Disclaimer:
-    ACNHAPI is a fan made API/Website and claims no ownership of any intellectual property associated with Nintendo or Animal Crossing. All assets found on the site and the repository are the sole property of Nintendo and are only used for non-commercial and educational purpose.</span>
+  <span
+    >Disclaimer: ACNHAPI is a fan made API/Website and claims no ownership of
+    any intellectual property associated with Nintendo or Animal Crossing. All
+    assets found on the site and the repository are the sole property of
+    Nintendo and are only used for non-commercial and educational purpose.</span
+  >
 </footer>
